correcting spacing & removing duplicate code

--- a/source/style.css
+++ b/source/style.css
@@ -2,18 +2,22 @@ body
 {background-color: rgb(223, 212, 213);
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   }
-ul{
-  margin: 0;
-  padding: 0;
-}
+
+
 h1{
   display: block;
   color: darkmagenta;
   font-weight: 100;
-  line-height: 20px;
+  line-height: 18px;
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+ul{
+  margin: 0;
+  padding: 0;
+}
+
 li{
   list-style-type: none;
   color:crimson;
@@ -44,14 +48,6 @@ li:first-letter{
   font-weight: 400;
   line-height: 1;}
 
-  h1{
-  display: block;
-  color: darkmagenta;
-  font-weight: 100;
-  line-height: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
 
 .weather-temperature .units{
   position: relative;
